# follow_waypoints

./: CMakeLists.txt  fwp.mvc  mapviz_plugins.xml  package.xml
include/mapviz_plugins/: follow_waypoints_plugin.h
launch/: follow_waypoints.launch
mapviz_plugins/: follow_waypoints_config.ui  follow_waypoints_plugin.cpp
