<package format="2">
  <name>follow_waypoints</name>
  <version>0.3.1</version>
  <description>
      The follow_waypoints node will listen for waypoints given as
      poses and when instructed will follow them one by one by publishing goals
      to move_base.
  </description>
  <maintainer email="danielsnider12@gmail.com">Daniel Snider</maintainer>
  <author email="danielsnider12@gmail.com">Daniel Snider</author>
  <license>Unlicense</license>
  <url type="website">http://wiki.ros.org/follow_waypoints</url>
  <url type="repository">https://github.com/danielsnider/follow_waypoints</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>qt5-qmake</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>mapviz</depend>
  <depend>mapviz_plugins</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>

  <export>
    <mapviz plugin="${prefix}/mapviz_plugins.xml" />
  </export>

</package>
